--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -12,20 +12,18 @@ spec:
               repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
               revision: HEAD
               directories:
-                - path: application-sets/example-apps/*
-          # cluster generator, 'child' #2
-          - clusters: {}
+                - path: ./environment-promotion/envs/*
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
     spec:
       project: default
       source:
-        repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
+        repoURL: '{{path}}'
         targetRevision: HEAD
         path: '{{path}}'
       destination:
-        server: '{{server}}'
+        server: 'https://kubernetes.default.svc
         namespace: '{{path.basename}}'
       syncPolicy:
         automated:
