--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -12,7 +12,7 @@ spec:
               repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
               revision: HEAD
               directories:
-                - path: ./environment-promotion/envs/*
+                - path: environment-promotion/envs/*
   template:
     metadata:
       name: '{{path.basename}}-{{name}}'
