--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -4,18 +4,14 @@ metadata:
   name: cluster-git
 spec:
   generators:
-    # matrix 'parent' generator
-    - matrix:
-        generators:
-          # git generator, 'child' #1
-          - git:
-              repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
-              revision: HEAD
-              directories:
-                - path: environment-promotion/envs/*
+  - git:
+     repoURL: https://github.com/codefresh-contrib/gitops-cert-level-2-examples.git
+     revision: HEAD
+     directories:
+     - path: environment-promotion/envs/*
   template:
     metadata:
-      name: '{{path.basename}}-{{name}}'
+      name: '{{path.basename}}'
     spec:
       project: default
       source:
