--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -19,7 +19,7 @@ spec:
         targetRevision: HEAD
         path: '{{path}}'
       destination:
-        server: 'https://kubernetes.default.svc
+        server: 'https://kubernetes.default.svc'
         namespace: '{{path.basename}}'
       syncPolicy:
         automated:
