--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -11,7 +11,7 @@ spec:
      - path: environment-promotion/envs/*
   template:
     metadata:
-      name: '{{path.basename}}'
+      name: 'https://github.com/wojtasool/gitops-cert-level-2-examples.git/{{path.basename}}'
     spec:
       project: default
       source:
