--- a/application-sets/my-application-sets/many-apps-many-cluster.yml
+++ b/application-sets/my-application-sets/many-apps-many-cluster.yml
@@ -11,11 +11,11 @@ spec:
      - path: environment-promotion/envs/*
   template:
     metadata:
-      name: 'https://github.com/wojtasool/gitops-cert-level-2-examples.git/{{path.basename}}'
+      name: '{{path.basename}}'
     spec:
       project: default
       source:
-        repoURL: '{{path}}'
+        repoURL: 'https://github.com/wojtasool/gitops-cert-level-2-examples.git'
         targetRevision: HEAD
         path: '{{path}}'
       destination:
